@@ -230,5 +230,13 @@ Patch 8 (5-Jan-2013)
     (*) FIXED: more memory for report header & items;
     (*) Socket is made (temporarily) blocking when sending report results;
 
+Build 24 (6-Dec-2016)
+    (*) Updating man documentation and status page to show usage for SSM calls
+    (*) Adding SSM call format to statpg.h table
+    (*) Adding -std=gnu99 to avoid issue with statpg.h documentation
+    string length being too long for C90
+    (*) Added Specfile for RPM building via Makefile
+    (*) Adding .gitignore file
+
 # __EOF__
 
